--- a/project.properties
+++ b/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../appcompat_v7
+android.library.reference.1=/mnt/sdcard/.aide/appcompat-v7.aar
 
 android.library.reference.1=/mnt/sdcard/.aide/appcompat-v7.aar
